--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "msgpack>=1.0.0",
     "python-dotenv>=1.0.0",
     "pyyaml>=6.0",
-    "aiohttp>=3.9.0",  # For Azure ML HTTP calls
+    "aiohttp>=3.9.0", # For Azure ML HTTP calls
+    "fastmcp>=2.13.0.2",
 ]
 
 [project.optional-dependencies]
